# chexmix

./: .gitignore  README.md  __main__.py  core_types.py  pyproject.toml  ruff.toml  train.sbatch
.github/workflows/: ci.yml  pytest.yml  ruff.yml  smoke_cpu.yml  ty.yml
.tmp_ckpt/0/: _CHECKPOINT_METADATA
config/: default.toml  smoke_cpu.toml
runs/20251224_202438_smoke_cpu/: config.toml  events.toml
runs/20251224_223738_smoke_cpu/: config.toml  events.toml
runs/20251224_223831_smoke_cpu/: events.toml
runs/20251225_034050_smoke_cpu/: events.toml
runs/20251225_034346_smoke_cpu/: events.toml
runs/20251225_192115_smoke_cpu/: events.toml
runs/20251228_201831_default/: events.toml
runs/20251228_213714_default/: events.toml
runs/20251228_222533_default/: config.toml  events.toml
scripts/slurm/: eval.sbatch  (+1 more)
slurm/: slurm_49159092.err  slurm_49159092.out  slurm_49159167.err  slurm_49159167.out  slurm_49159195.err  slurm_49159195.out  slurm_49159446.err  slurm_49159446.out  slurm_49159597.err  slurm_49159597.out  slurm_49160731.err  slurm_49160731.out  slurm_49161381.err  slurm_49161381.out  slurm_49161825.err  slurm_49161825.out  slurm_49172806.err  slurm_49172806.out  slurm_49172963.err  slurm_49172963.out
src/: chex_types.py  cli.py  paths.py  rng.py  toml_io.py
tests/: conftest.py  test_checkpoint_roundtrip.py  test_cli.py  test_env_pgx_chess.py  test_eval_arena.py  test_eval_elo.py  test_logging.py  test_losses.py  test_mcts_legal.py  test_model_shapes.py  test_pgn_writer.py  test_rng.py  test_selfplay_rollout.py  test_toml_io.py  test_train_step.py
(+10719 files in other folders)
